--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,23 +8,21 @@
     <title>Relatório</title>
 </head>
 <body>
-    <div class="center-box">
-        <div class="barra-superior">
-           
-        </div>
-    <h1>Contato Conosco</h1>
+   
     <form action="https://api.staticforms.xyz/submit" method="post">
-        
-        <label for="Nome">Nome</label>
+        <h1>Contato</h1><br>
+        <label for="">Nome</label>
+        <label for="Nome"></label>
         <input type="text" nome="name" placeholder="Digite seu Nome"><br>
         <label>Email</label>
         <input type="email" nome="email" placeholder="Digite seu Email"><br>
         <label>Relato</label><br>
-        <textarea name="message" id="" cols="30" rows="10" placeholder="Digite seu problema:"></textarea><br>
-        <button type="submit">Enviar</button>
+        <textarea name="message" id="" cols="30" rows="10" placeholder="Digite seu problema:"></textarea>
+        <a href="https://www.devmedia.com.br/html-href-referenciando-urls-externas-no-html/43513">
+            <button type="submit">Enviar</button>
+    <a href="continua.html"></a>
         <input type="hidden" name="accessKey" value="a8060fdb-872d-4c27-9a4b-aa02874bc8d7">"
         <input type="hidden" name="redirectTo" value="C:\Users\gusta\OneDrive\Área de Trabalho\Nova pasta\sla.html">
-        <div>
     </form>
 </body>
 </html>
